--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   main:
-    uses: codbex/codbex-infra/.github/workflows/application-build.yaml@main
+    uses: codbex/codbex-infra/.github/workflows/module-build.yaml@main
     with:
-      application-name: codbex-countries
+      packages-build: codbex-countries
     secrets: inherit
