--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -13,3 +13,11 @@ updates:
     open-pull-requests-limit: 10
     labels:
       - dependencies
+
+  - package-ecosystem: npm
+    directory: "/codbex-countries-data"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
+    labels:
+      - dependencies
