--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,7 @@ jobs:
   main:
     uses: codbex/codbex-infra/.github/workflows/module-release.yaml@main
     with:
-      packages: codbex-countries,codbex-countries-data
+      packages: codbex-countries
       packages-build: codbex-countries
       release-version: ${{ inputs.release-version }}
       release-content: |
@@ -26,7 +26,6 @@ jobs:
   
         ```
         npm install @codbex/codbex-countries@${{ inputs.release-version }}
-        npm install @codbex/codbex-countries-data@${{ inputs.release-version }}
         ```
   
         ## Access points:
